--- a/sn-article.tex
+++ b/sn-article.tex
@@ -98,7 +98,7 @@
 %
 This section provides a comprehensive explanation of the structure of the visual instructional placards and the general guidelines for using them effectively.
 The visual placards serve as a guide for annotators and are structured in a specific way to ensure consistent and accurate annotation of the Risk of Bias (RoB) questions.
-Each placard begins with a title that clearly indicates which signaling question it provides annotation instructions for. 
+Each placard begins with a title that clearly indicates which signalling question it provides annotation instructions for. 
 Following the title, a flowchart is provided to guide annotators through the process of annotating each RoB question based on the revised Cochrane Risk of Bias tool 2 for assessment of Randomized Controlled Trials (RCTs) (referred to as RoB 2 hereafter).
 The flowcharts consist of several components, including:
 %
@@ -341,7 +341,7 @@ This can potentially introduce bias and alter the study outcomes~\cite{hrobjarts
 %
 
 % TODO: Fix this by mixing with above text...
-To provide clearer guidance, please follow Flowchart~\ref{fig:2_2} for annotation instructions related to the signaling question, "Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?"
+To provide clearer guidance, please follow Flowchart~\ref{fig:2_2} for annotation instructions related to the signalling question, "Were the carers and people delivering the interventions aware of the participants' assigned intervention during the trial?"
 In the explanation above, the first diamond directs annotators to search for sentences that describe the procedure for administering the intervention under investigation and the placebo.
 If such sentences are found, the annotators should annotate both parts of the text: the section describing intervention administration and the section explaining how carers and administrators were blinded using a placebo or sham.
 If the sham is considered a good blinding procedure, label these text parts with ``2.2 No Good''.
@@ -951,11 +951,12 @@ The information is likely found in the Methods section.
 \label{sec:dom5}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-Risk domain 5 in RoB 2 tool refers to the ``Bias in the selection of reported results'' domain.
-This domain assesses the risk of bias that may arise from the selective reporting of outcomes or analyses within a study.
+Risk domain 5 in RoB 2 refers to the ``Bias in the selection of reported results''.
+This domain assesses the bias risk that may arise from the selective reporting of outcomes or analyses within a study.
 Selective reporting can lead to biased or incomplete reporting of results, which may distort the overall findings and affect the interpretation of the study's conclusions.
 The assessment of risk domain 5 helps determine whether the study has adequately reported all the intended outcomes and analyses as specified in the study protocol or pre-specified plans.
 This ensures transparency and reduces the risk of bias arising from selective reporting.
+Assessment of this domain requires trial protocol document in addition to the RCT itself.
 %
 %
 %
@@ -963,10 +964,10 @@ This ensures transparency and reduces the risk of bias arising from selective re
 \label{subsec:5_1}
 %
 The signalling question 5.1, ``Were the data that produced this result analyzed in accordance with a pre-specified analysis plan that was finalized before unblinded outcome data were available for analysis?'' evaluates whether particular results were analyzed according to a pre-defined analysis plan that was established before the researchers had access to the unblinded outcome data.
-Suppose the analysis plan was established before accessing the unblinded outcome results and was followed correctly after obtaining the results; then it suggests that the analysis was conducted independently of the researcher's knowledge of the outcome, reducing the potential for bias in the interpretation of the data.
-If an analysis plan was established until after accessing the results of the outcome, then some risk of bias could be introduced by knowledge of the results~\cite{riiser2022cycling}. % The randomized controlled trials included in the meta-analysis were considered to have a low risk of bias because they had a predefined analysis plan.
-Assessment of this domain requires trial protocol document in addition to the trial itself.
-In our work, one of the annotators manually retrieved and attached the pdf of trial protocol to the clinical trial study.
+If the analysis plan was established before accessing the unblinded outcome results and was followed correctly after obtaining the results; then it suggests that the analysis was conducted independently of the researcher's knowledge of the outcome, reducing the potential for bias in the interpretation of the results.
+If an analysis plan was established after accessing the results of the outcome, then some risk of bias could be introduced by knowledge of the results~\cite{riiser2022cycling}. % The randomized controlled trials included in the meta-analysis were considered to have a low risk of bias because they had a predefined analysis plan.
+
+
 %
 %
 %
@@ -980,29 +981,28 @@ In our work, one of the annotators manually retrieved and attached the pdf of tr
 %
 %
 
-For annotation instructions for this signalling question, ``RoB 5.1 Were the data that produced this result analysed in accordance with a pre-specified analysis plan that was finalized before unblinded outcome data were available for analysis?'' follow the Flowchart~\ref{fig:5_1}.
-In accordance with the explanation above, the first diamond in the flowchart asks the annotators to find the outcomes of interest that were assessed. 
-Next, they are requested to check whether any protocol/registry/statistical analysis plan attached to the trial document.
-If a trial protocol is not found, then the study will be automatically considered as ``5.1 No Information'' for this signalling question.
-If a trial protocol is found, follow to identify the outcome measurements used to assess the outcome(s) of interest.
-Annotate them
-This information should be found in the trial protocol and if not found then the study will be automatically considered as ``5.1 No Information''.
-Are the outcome measures in the clinical trial the same as outcome measures as listed in the trial protocol?
+
+The annotation instructions for SQ 5.1 are provided in Flowchart~\ref{fig:5_1}.
+The first diamond in the flowchart asks the annotators to check whether a trial protocol/registry/statistical analysis plan is to be found attached to the RCT.
+If a protocol is not found, then the study will be automatically considered as ``5.1 No Information'' for this signalling question.
+If a trial protocol is found, the annotator proceed to the second diamond in the flowchart.
+The second diamond asks the annotator to find the outcome measure used to assess the target outcome in the trial protocol.
+If this information is not found then the study will be automatically considered as ``5.1 No Information''.
+If the outcome measure is found in the trial protocol, the flowchart directs annotators to compare it with the outcome measures for the target listed in the clinical trial.
 This information should be found in the methods section of the clinical trial.
-Annotate the information. 
-If the outcome measures as listed in the protocol and the clinical study are same, then label the trial as ``5.1 Yes Good'' and otherwise ``5.1 No Bad''.
-
-
+If found, is the outcome measure used to measure target outcome in the trial protocol the same as outcome measures as listed in the clinical trial?
+Annotate the sentences describing this information. 
+If the outcome measures as listed in the protocol and the clinical study are same, then label the annotated information in both trial protocol and the trial as ``5.1 Yes Good'' and otherwise ``5.1 No Bad''.
 
 %
 %
 %
-\subsection*{Signalling question - 5.2 }
+\subsection*{Signalling question - 5.2}
 \label{subsec:5_2}
 %
-The signalling question 5.2, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' aims to evaluate whether the researchers selectively chose a specific result among various possible outcome measurements, such as different scales, definitions, or time points, based on the findings they obtained.
-If researchers have access to multiple outcome measurements and choose the one that yields a favourable or significant result, it can introduce bias and compromise the objectivity of the findings. 
-Evaluating this risk of bias helps assess whether the reported result was genuinely chosen based on a predetermined protocol plan or selectively chosen based on the obtained results, potentially introducing a bias in favour of a particular outcome measurement.
+The signalling question 5.2, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' assesses whether the RCT authors selectively chose a specific outcome measurement from various possible outcome measurements such as choosing from different scales, definitions, or time points, based on the findings obtained.
+If a specific outcome measure was selectively chosen out of many, it could mean it was chosen as it yielded favourable result thereby introducing bias risk in the study.
+The reported result should be genuinely chosen based on a predetermined protocol plan and not selectively chosen based on the obtained results because it could introduce a bias in favour of a particular outcome measurement.
 
 
 %
@@ -1018,17 +1018,15 @@ Evaluating this risk of bias helps assess whether the reported result was genuin
 %
 %
 
-For annotation instructions for this signalling question, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' follow the Flowchart~\ref{fig:5_2}.
-In accordance with the explanation above, the first diamond in the flowchart asks the annotators to find the outcomes of interest that were assessed. 
-Next, they are requested to check whether any protocol/registry/statistical analysis plan attached to the trial document.
-If a trial protocol is not found, then the study will be automatically considered as ``5.2 No Information'' for this signalling question.
-If a trial protocol is found, follow to identify all the outcome measures used to assess the target outcome in the trial protocol? 
-Mark the sentence that mentions them.
+For annotation instructions of this signalling question 5.2 follow the Flowchart~\ref{fig:5_2}.
+The first diamond in the flowchart asks the annotators to check whether a trial protocol/registry/statistical analysis plan is to be found attached to the RCT.
+If a protocol is not found, then the study will be automatically considered as ``5.2 No Information'' for this signalling question.
+If a trial protocol is found, the annotator proceed to the second diamond in the flowchart.
+If a trial protocol is found, follow to identify the outcome measures used to assess the target outcome in the trial protocol and annotate it.
 This information should be found in the trial protocol and if not found then the study will be automatically considered as ``5.2 No Information''.
-Were some of these outcome measures found in the protocol omitted in the clinical trial?
-Mark the sentence that mentions them.
-This information should be found in the methods section of the clinical trial.
-If all the outcome measures as listed in the protocol are reported in the clinical study, then label the trial as ``5.2 Yes Good'' and otherwise ``5.2 No Bad''.
+If the information is found, the annotator moves to the third diamond in the flowchart which asks if some of these outcome measures found in the protocol omitted in the clinical trial? 
+This information should be found in the methods section of the clinical trial and if found annotate it.
+If all the outcome measures as listed in the protocol are reported in the clinical study, then label the trial as ``5.2 Yes Good'' and otherwise ``5.2 No Bad''. %TODO: Clarify with Roger and Julian Higgins.
 
 %
 %
@@ -1054,13 +1052,12 @@ Hence this question aims to analyse whether a predefined analysis plan was in pl
 %
 %
 
-For annotation instructions for this signalling question, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible analyses of the data??'' follow the Flowchart~\ref{fig:5_3}.
+For annotation instructions for the SQ 5.3 follow the Flowchart~\ref{fig:5_3}.
 In accordance with the explanation above, the first diamond in the flowchart asks the annotators if a trial protocol is found.
 If a trial protocol is not found, then the study will be automatically considered as ``5.3 No Information''.
 If a trial protocol is found, the annotators are asked to find all the prespecified methods of analysis used to assess effect of intervention on the target outcome in the trial protocol?
 Mark the sentence that mentions them.
-%This information should be found in the trial protocol and if not found then the study will be automatically considered as ``5.3 No Information''.
-Check if all the outcomes analysis methods found in the trial protocol were also found in the clinical study.
+Check if all the outcomes analysis methods found in the trial protocol were also found in the RCT.
 If some of these  methods of analysis found in the protocol were omitted in the clinical trial or in case there are additional analysis methods not reported in the protocol, then annotate the sentence(s) that mentions these methods in context of intervention effect assessment.
 If some of the methods were missing or some additional methods were conducted for outcomes analysis then label these descriptions as ``5.3 No Bad'' and otherwise ``5.3 Yes Good''.
 This information should be found in the methods section (statistical analysis) of the clinical trial.
