Added references for domain 4

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -781,7 +781,7 @@ If the missing outcome data due to switching interventions is less than 5\%, mar
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 The fourth risk domain in the RoB 2 tool is referred to as ``Bias in the measurement of the outcome'' for the outcome of interest.
-This domain aims to evaluate whether there are potential sources of bias in how the outcome is assessed, including issues such as the blinding of outcome assessors and the reliability and validity of outcome measurement methods.
+This domain aims to evaluate whether there are potential sources of bias in how the outcome is assessed, including issues such as the blinding of outcome assessors and the reliability and validity of outcome measurement methods ~\cite{heneghan2017clinical,dadouch2019variation}.
 %
 %
 %
@@ -821,7 +821,7 @@ This information is found in the Methods section of the RCTs.
 \subsection*{Signalling question - 4.2 }
 \label{subsec:4_2}
 %
-The signalling question 4.1 ``Could measurement or ascertainment of the outcome have differed between intervention groups?'' assesses whether outcome measurement methods could have differed between the intervention groups in a study.
+The signalling question 4.2 ``Could measurement or ascertainment of the outcome have differed between intervention groups?'' assesses whether outcome measurement methods could have differed between the intervention groups in a study.
 This question examines whether the methods used for outcome measurement were valid, consistent and applied equally to all intervention groups.
 For example, if one group is assessed using a more sensitive or specific measurement tool, it may lead to overestimation or underestimation of treatment effects compared to the other group leading to systematic biases.
 In general, unequal or inconsistent outcome measurement methods between the groups can undermine the internal validity of the study~\cite{enwald2010preventing}. % Nevertheless, the effect of possible biases, such as relying solely on self-reports and on intervention design without a no-information control group, should not be underestimated.
@@ -965,7 +965,8 @@ Assessment of this domain requires trial protocol document in addition to the RC
 %
 The signalling question 5.1, ``Were the data that produced this result analyzed in accordance with a pre-specified analysis plan that was finalized before unblinded outcome data were available for analysis?'' evaluates whether particular results were analyzed according to a pre-defined analysis plan that was established before the researchers had access to the unblinded outcome data.
 If the analysis plan was established before accessing the unblinded outcome results and was followed correctly after obtaining the results; then it suggests that the analysis was conducted independently of the researcher's knowledge of the outcome, reducing the potential for bias in the interpretation of the results.
-If an analysis plan was established after accessing the results of the outcome, then some risk of bias could be introduced by knowledge of the results~\cite{riiser2022cycling}. % The randomized controlled trials included in the meta-analysis were considered to have a low risk of bias because they had a predefined analysis plan.
+If an analysis plan was established after accessing the results of the outcome, then some risk of bias could be introduced by knowledge of the results~\cite{riiser2022cycling}.
+% The randomized controlled trials included in the meta-analysis were considered to have a low risk of bias because they had a predefined analysis plan.
 
 
 %
@@ -1026,7 +1027,7 @@ If a trial protocol is found, follow to identify the outcome measures used to as
 This information should be found in the trial protocol and if not found then the study will be automatically considered as ``5.2 No Information''.
 If the information is found, the annotator moves to the third diamond in the flowchart which asks if some of these outcome measures found in the protocol omitted in the clinical trial? 
 This information should be found in the methods section of the clinical trial and if found annotate it.
-If all the outcome measures as listed in the protocol are reported in the clinical study, then label the trial as ``5.2 Yes Good'' and otherwise ``5.2 No Bad''. %TODO: Clarify with Roger and Julian Higgins.
+If all the outcome measures as listed in the protocol are reported in the clinical study, then label the trial as ``5.2 Yes Good'' and otherwise ``5.2 No Bad''.
 
 %
 %
