--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -800,6 +800,31 @@
   publisher={American Medical Association}
 }
 
+
+@article{heneghan2017clinical,
+  title={Why clinical trial outcomes fail to translate into benefits for patients},
+  author={Heneghan, Carl and Goldacre, Ben and Mahtani, Kamal R},
+  journal={Trials},
+  volume={18},
+  number={1},
+  pages={1--7},
+  year={2017},
+  publisher={BioMed Central}
+}
+
+@article{dadouch2019variation,
+  title={Variation in outcome reporting in studies on obesity in pregnancy—A systematic review},
+  author={Dadouch, Rachel and Faheim, Mina and Susini, Orsolina and Sedra, Silvana and Showell, Marian and D'Souza, Rohan and COSSOPP investigators},
+  journal={Clinical Obesity},
+  volume={9},
+  number={6},
+  pages={e12341},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
+
+
 @article{enwald2010preventing,
   title={Preventing the obesity epidemic by second generation tailored health communication: an interdisciplinary review},
   author={Enwald, Heidi P{\"a}ivyt Karoliina and Huotari, Maija-Leena Aulikki},
