Commit after submission

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -388,7 +388,7 @@ If the percentage of deviations is identified, annotators should annotate the fu
 They should then proceed to the next diamond in the flowchart, following the ``yes'' flow, and the next diamond instructs the annotator to assess whether these deviations occurred due to the trial context.
 If the deviations are determined to be due to the trial context, the annotated sentence(s) should be marked as ``2.3 Yes Bad''.
 If the deviations are not attributed to the trial context, they should be marked as ``2.3 No Good''.
-For example, ``Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after...''~\cite{osteraas2019implementing}. % Anjani: requires fact-checking if this is 2.3 Yes Bad or No Good
+For example, ``Two patients in the control group receiving physiotherapy (usual care) erroneously attended the PT-led education and exercise programme after...''~\cite{osteraas2019implementing}.
 Additionally, if annotators identify the reasons for their choices of ``no good'' or ``yes bad'', they should mark the sentences explaining their rationale.
 It is important to note that a second annotation may be required if there are supporting sentences for the reason behind the choice.
 This second annotation allows for capturing additional information.
@@ -793,7 +793,7 @@ This domain aims to evaluate whether there are potential sources of bias in how 
 %It considers factors such as the validity, reliability, and precision of the outcome measurement methods.
 %Validity refers to whether the chosen measures effectively capture the construct being investigated, while reliability refers to the consistency and reproducibility of the measurement.
 The signalling question 4.1, ``Was the method of outcome measurement inappropriate?'' aims to evaluate the validity, reliability and precision of the outcome measurement method employed to measure the outcomes of interest from the study.
-The validity of an outcome measurement method refers to its ability to effectively capture the construct being investigated, while reliability refers to the consistency and reproducibility of the measurement.
+The validity of an outcome measurement method refers to its ability to effectively capture the construct being investigated, while reliability refers to the consistency and reproducibility of the measurement~\cite{williamson2012developing,grill2019mci,rubin2014systematic}.
 
 %
 %
@@ -857,7 +857,7 @@ The signalling question 4.3 ``Were outcome assessors aware of the intervention r
 If the outcome assessors are unblinded, they may unintentionally or inadvertently favour one one intervention over another based on preconceived notions about the interventions.
 Blinding of outcome assessors is particularly important in studies where subjective outcomes are assessed which is the case in physiotherapy and rehabilitation.
 For instance, a systematic review and meta-analysis on acupuncture for the treatment of peripheral neuropathy highlighted the potential bias introduced if outcome assessors are not blinded to treatment assignment~\cite{dimitrova2017acupuncture}.
-Therefore, blinding the outcome assessors helps minimize the risk of bias and ensures that the assessments are conducted objectively and independently from knowledge of the intervention.
+Therefore, blinding the outcome assessors helps minimize the risk of bias and ensures that the assessments are conducted objectively and independently from knowledge of the intervention~\cite{watanabe2022treatment,hrobjartsson2013observer}.
 %- Inadvertently favor one intervention over another
 %- Systematic differences in the outcome measurement (reduces accuracy and comparability)
 %- recording outcomes in a way that aligns with their expectations.
@@ -892,7 +892,7 @@ This information if not found from the Methods sections, could also be annotated
 %
 The signalling question 4.4 ``Could assessment of the outcome have been influenced by knowledge of intervention received?'' evaluates the potential for bias resulting from outcome assessors' awareness of the intervention received by the participants.
 This question aims to assess whether outcome assessments ``could'' have been influenced or biased by the assessors' knowledge of the intervention assignment.
-As explained in the signalling question 4.3, that assessors awareness of assigned intervention could cause biases.
+As explained in the signalling question 4.3, that assessors awareness of assigned intervention could cause biases~\cite{watanabe2022treatment,hrobjartsson2013observer,dimitrova2017acupuncture}.
 
 %
 %
@@ -921,7 +921,7 @@ For the domains of physiotherapy and rehabilitation, the question is quite theor
 %
 The signalling question 4.5 ``Is it likely that the assessment of the outcome was influenced by knowledge of the intervention received?'' evaluates the likelihood that the outcome assessment was biased due to assessors' knowledge of the intervention received by the participants.
 The question is similar to the question 4.4, but it directly asks about the likelihood of the assessment being influenced by knowledge of the intervention.
-It seeks a determination of the probability or likelihood of such an influence being present.
+It seeks a determination of the probability or likelihood of such an influence being present~\cite{watanabe2022treatment,hrobjartsson2013observer,dimitrova2017acupuncture}.
 
 
 %
@@ -956,7 +956,7 @@ This domain assesses the bias risk that may arise from the selective reporting o
 Selective reporting can lead to biased or incomplete reporting of results, which may distort the overall findings and affect the interpretation of the study's conclusions.
 The assessment of risk domain 5 helps determine whether the study has adequately reported all the intended outcomes and analyses as specified in the study protocol or pre-specified plans.
 This ensures transparency and reduces the risk of bias arising from selective reporting.
-Assessment of this domain requires trial protocol document in addition to the RCT itself.
+Assessment of this domain requires trial protocol document in addition to the RCT itself~\cite{dwan2013systematic}.
 %
 %
 %
@@ -1003,7 +1003,7 @@ If the outcome measures as listed in the protocol and the clinical study are sam
 %
 The signalling question 5.2, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' assesses whether the RCT authors selectively chose a specific outcome measurement from various possible outcome measurements such as choosing from different scales, definitions, or time points, based on the findings obtained.
 If a specific outcome measure was selectively chosen out of many, it could mean it was chosen as it yielded favourable result thereby introducing bias risk in the study.
-The reported result should be genuinely chosen based on a predetermined protocol plan and not selectively chosen based on the obtained results because it could introduce a bias in favour of a particular outcome measurement.
+The reported result should be genuinely chosen based on a predetermined protocol plan and not selectively chosen based on the obtained results because it could introduce a bias in favour of a particular outcome measurement~\cite{rankin2017selective,bouter2021research}.
 
 
 %
@@ -1036,7 +1036,7 @@ If all the outcome measures as listed in the protocol are reported in the clinic
 \label{subsec:5_3}
 %
 This signalling question 5.3, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible analyses of the data?'' aims to determine whether the researchers selectively chose a specific numerical result among various possible data analyses based on the findings they obtained.
-When researchers have flexibility in conducting multiple analyses on the same dataset and selecting and reporting the analysis that yields favourable results and supports some hypothesis, it could potentially introduce some risk of bias.
+When researchers have flexibility in conducting multiple analyses on the same dataset and selecting and reporting the analysis that yields favourable results and supports some hypothesis, it could potentially introduce some risk of bias~\cite{swanson2021registration}.
 Hence this question aims to analyse whether a predefined analysis plan was in place in the trial protocol and whether it was genuinely followed for results analysis and reporting to ensure transparency and mitigate the risk of biased reporting.
 
 
