--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -823,6 +823,37 @@
   publisher={Wiley Online Library}
 }
 
+@article{williamson2012developing,
+  title={Developing core outcome sets for clinical trials: issues to consider},
+  author={Williamson, Paula R and Altman, Douglas G and Blazeby, Jane M and Clarke, Mike and Devane, Declan and Gargon, Elizabeth and Tugwell, Peter},
+  journal={Trials},
+  volume={13},
+  pages={1--8},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{grill2019mci,
+  title={Which MCI patients should be included in prodromal Alzheimer’s disease clinical trials?},
+  author={Grill, Joshua D and Nu{\~n}o, Michelle M and Gillen, Daniel L and Alzheimer’s Disease Neuroimaging Initiative and others},
+  journal={Alzheimer disease and associated disorders},
+  volume={33},
+  number={2},
+  pages={104},
+  year={2019},
+  publisher={NIH Public Access}
+}
+
+@article{rubin2014systematic,
+  title={Systematic review of outcome measures in trials of pediatric anaphylaxis treatment},
+  author={Rubin, Tamar and Clayton, Jacqueline and Adams, Denise and Jou, Hsing and Vohra, Sunita},
+  journal={BMC pediatrics},
+  volume={14},
+  number={1},
+  pages={1--8},
+  year={2014},
+  publisher={BioMed Central}
+}
 
 
 @article{enwald2010preventing,
@@ -847,6 +878,28 @@
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
 
+@article{watanabe2022treatment,
+  title={When are treatment blinding and treatment standardization necessary in real-world clinical trials?},
+  author={Watanabe, Jonathan H and Simon, Gregory E and Horberg, Michael and Platt, Richard and Hernandez, Adrian and Califf, Robert M},
+  journal={Clinical Pharmacology \& Therapeutics},
+  volume={111},
+  number={1},
+  pages={116--121},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{hrobjartsson2013observer,
+  title={Observer bias in randomized clinical trials with measurement scale outcomes: a systematic review of trials with both blinded and nonblinded assessors},
+  author={Hr{\'o}bjartsson, Asbj{\o}rn and Thomsen, Ann Sofia Skou and Emanuelsson, Frida and Tendal, Britta and Hilden, J{\o}rgen and Boutron, Isabelle and Ravaud, Philippe and Brorson, Stig},
+  journal={Cmaj},
+  volume={185},
+  number={4},
+  pages={E201--E211},
+  year={2013},
+  publisher={Can Med Assoc}
+}
+
 @article{riiser2022cycling,
   title={E-cycling and health benefits: A systematic literature review with meta-analyses},
   author={Riiser, Amund and Bere, Elling and Andersen, Lars Bo and Nordengen, Solveig},
@@ -855,6 +908,50 @@
   pages={1031004},
   year={2022},
   publisher={Frontiers}
+}
+
+@article{dwan2013systematic,
+  title={Systematic review of the empirical evidence of study publication bias and outcome reporting bias—an updated review},
+  author={Dwan, Kerry and Gamble, Carrol and Williamson, Paula R and Kirkham, Jamie J and Reporting Bias Group},
+  journal={PloS one},
+  volume={8},
+  number={7},
+  pages={e66844},
+  year={2013},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{rankin2017selective,
+  title={Selective outcome reporting in obesity clinical trials: a cross-sectional review},
+  author={Rankin, J and Ross, A and Baker, J and O'Brien, M and Scheckel, C and Vassar, M},
+  journal={Clinical obesity},
+  volume={7},
+  number={4},
+  pages={245--254},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{bouter2021research,
+  title={Research integrity and societal trust in research},
+  author={Bouter, Lex and Horn, Lyn and Kleinert, Sabine},
+  journal={SA Heart},
+  volume={18},
+  number={2},
+  pages={80--81},
+  year={2021},
+  publisher={The South African Heart Association}
+}
+
+@article{swanson2021registration,
+  title={Registration, publication, and outcome reporting among pivotal clinical trials that supported FDA approval of high-risk cardiovascular devices before and after FDAAA},
+  author={Swanson, Matthew J and Johnston, James L and Ross, Joseph S},
+  journal={Trials},
+  volume={22},
+  number={1},
+  pages={817},
+  year={2021},
+  publisher={Springer}
 }
 
 %%%%%
@@ -958,6 +1055,17 @@
   pages={e1002897},
   year={2019},
   publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{gajdos2010effectiveness,
+  title={Effectiveness of chest physiotherapy in infants hospitalized with acute bronchiolitis: a multicenter, randomized, controlled trial},
+  author={Gajdos, Vincent and Katsahian, Sandrine and Beydon, Nicole and Abadie, Veronique and De Pontual, Lo{\"\i}c and Larrar, Sophie and Epaud, Ralph and Chevallier, Bertrand and Bailleux, Sylvain and Mollet-Boudjemline, Alix and others},
+  journal={PLoS medicine},
+  volume={7},
+  number={9},
+  pages={e1000345},
+  year={2010},
+  publisher={Public Library of Science San Francisco, USA}
 }
 
 @article{eskilsson2017aerobic,
@@ -1286,17 +1394,6 @@
   number={3},
   pages={e1003046},
   year={2020},
-  publisher={Public Library of Science San Francisco, CA USA}
-}
-
-@article{garnaes2016exercise,
-  title={Exercise training and weight gain in obese pregnant women: a randomized controlled trial (ETIP trial)},
-  author={Garn{\ae}s, Kirsti Krohn and M{\o}rkved, Siv and Salvesen, {\O}yvind and Moholdt, Trine},
-  journal={PLoS medicine},
-  volume={13},
-  number={7},
-  pages={e1002079},
-  year={2016},
   publisher={Public Library of Science San Francisco, CA USA}
 }
 
